--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,19 @@
     <link rel="stylesheet" href="styles.css">
     <title>Alurabooks</title>
 </head>
-<body>
-    
-</body>
-</html>
 
-<!-- Aula 01 - finalizada -->
+<body>
+    <header class="cabeçalho">
+        <div class="container">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+        </div>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="img/Sacola.svg" alt="Carrinho de compras" class="container__imagem"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+        </div>
+    </header>
+</body>
+
+</html>
