added topicos structure

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <div class="card__botões">
                 <!-- 1.coluna -->
                 <ul class="botões">
-                    <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botões__item"><img src="img/Sacola.svg" alt="Adicionar ao carrinho de compras"></li>
+                    <li class="botões__item"><a href="#"></a><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botões__item"><a href="#"></a><img src="img/Sacola.svg" alt="Adicionar ao carrinho de compras"></li>
                 </ul>
                 <a href="#" class="botões__ancora">Saiba mais</a>
             </div>
@@ -151,12 +151,43 @@
             <div class="card__botões">
                 <!-- 1.coluna -->
                 <ul class="botões">
-                    <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botões__item"><img src="img/Sacola.svg" alt="Adicionar ao carrinho de compras"></li>
+                    <li class="botões__item"><a href="#"></a><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botões__item"><a href="#"></a><img src="img/Sacola.svg" alt="Adicionar ao carrinho de compras"></li>
                 </ul>
                 <a href="#" class="botões__ancora">Saiba mais</a>
             </div>
         </div>
+    </section>
+    
+    <section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Android</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Marketing Digital</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Agile</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Startups</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">HTML e CSS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Python</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">OO</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Java</a>
+            </li>
+        </ul>
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
